change the folder back to before

--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "app.js",
-  "scripts": {
-    "dev": "nodemon backend/app.js",
-    "start": "node backend/app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemailer": "^6.9.16"
   },
+  "scripts": {
+    "dev": "concurrently \"npm run dev --prefix compro-main\" \"npm run server --prefix backend\"",
+    "server": "nodemon backend/app.js"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.0"
+  },
+  "name": "beyond-growth-2",
+  "version": "1.0.0",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "description": ""
 }
